<resources>
    <string name="facebook_app_id" translatable="false">ENTER_YOUR_FACEBOOK_ID_HERE</string>
    <string name="fb_login_protocol_scheme" translatable="false">ENTER_YOUR_FACEBOOK_PROTOCOL_HERE</string>
    <string name="facebook_client_token" translatable="false">ENTER_YOUR_FACEBOOK_CLIENT_TOKEN_HERE</string>
    <string name="empty_email">Email is required</string>
    <string name="empty_otp">OTP  is required</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="empty_password">Password  is required</string>
    <string name="empty_music_instrument">Music instrument is required</string>
    <string name="ok">OK</string>
    <string name="session_expired">Session expired</string>
    <string name="loading">Loading…</string>
    <string name="login_with_line">Continue with Line</string>
    <string name="login_with_twitter">Continue on Twitter</string>
    <string name="login_with_facebook">Continue on Facebook</string>
    <string name="login_with_instagram">Continue on Instagram</string>
    <string name="register_by_email">Register by email</string>
    <string name="register">Register an account</string>
    <string name="self_introduction">Self-Introduction</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender">Gender</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="profile_name">Profile name</string>
    <string name="email">Email :</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="image_description">Image</string>
    <string name="login_user">Login User</string>
    <string name="send">Send</string>
    <string name="register_with_email">Register with your email address</string>
    <string name="register_with_an_sns_account">Register with an SNS account</string>
    <string name="don_t_register_now">Don\'t register now</string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="cancel_not_underlined">Cancel</string>
    <string name="please_enter_your_email">Please enter your email address</string>
    <string name="to_register">To Register</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_enter_your_one_time_password">Please enter your one-time password</string>
    <string name="one_time_password">One-time password</string>
    <string name="already_have_a_code"><u>Already have a code</u></string>
    <string name="empty_username">Username  is required</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="song_list">List of songs</string>
    <string name="favorites">Favorite</string>
    <string name="my_page">My Page</string>
    <string name="choose_an_icon">Choose an icon</string>
    <string name="enter_your_name">Please enter your name</string>
    <string name="full_name">Full name</string>
    <string name="this_information_will_not_be_published">This information will not be published</string>
    <string name="required">Required</string>
    <string name="save">Save</string>
    <string name="nickname_with_requirement">Nickname (full-width 12 characters or less)</string>
    <string name="please_enter_your_nick_name">Please enter a nickname</string>
    <string name="please_enter_instrument_name">Please name the instrument</string>
    <string name="musical_instrument">Musical instrument</string>
    <string name="post_code">Post Code</string>
    <string name="prefectures_will_be_released">Prefectures will be released</string>
    <string name="please_enter_your_zip_code">Please enter your zip code</string>
    <string name="age">Date of birth</string>
    <string name="profession">Profession</string>
    <string name="_1997">1997</string>
    <string name="_12">12</string>
    <string name="_15">15</string>
    <string name="student">Student</string>
    <string name="send_the_one_time_password_again">Send the one-time password again</string>
    <string name="complete_input">Complete the input</string>
    <string name="register_password">Register password</string>
    <string name="password_requirement">Use at least 1 uppercase/lowercase alphabetic character, number, and symbol (!\"\"\#\$\%\&amp;\'()=~), and be between 8 and 15 characters.</string>
    <string name="select_gender">Gender  is required</string>
    <string name="empty_dob">DOB cannot be empty</string>
    <string name="profession_empty">Professional is required</string>
    <string name="postal_code_empty">Postal code is required</string>
    <string name="name_empty">Full name is required</string>
    <string name="login_success">Login Successful</string>
    <string name="to_the_next">To the next</string>
    <string name="return_back">Return</string>
    <string name="how_to_use_this_app">How to use this app</string>
    <string name="i_will_explain_it">I will explain it. I will explain it. I will explain it. I will explain it. I will explain it. I will explain it. I will explain it. I will explain it. I will explain it.</string>
    <string name="completion">Completion</string>
    <string name="login">Login</string>
    <string name="login_title">Log in</string>
    <string-array name="YearList">
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>
    <string-array name="MonthList">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="DayList">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string name="reset_password">If you don\'t know or forget your password</string>
    <string name="text_choose_from_library">Gallery</string>
    <string name="text_take_photo">Photo</string>
    <string name="text_add_photo">Add New Photo</string>
    <string name="profile_image_not_selected">Profile image should be selected.</string>
    <string name="error_no_internet_connection">No internet connection.Check your connection and try again.</string>
    <string name="nick_name_empty">Nick name cannot be empty</string>
    <string name="profile">Profile</string>
    <string name="registration_date">Registration date</string>
    <string name="change_photo">Change the photo</string>
    <string name="select_picture">Please select a photo</string>
    <string name="text_occupation">Occupation</string>
    <string name="change_password">Change password</string>
    <string name="list_of_purchased_contents">List of purchased contents</string>
    <string name="recording_list">Recording list</string>
    <string name="billing_history">Billing history</string>
    <string name="logout">Logout</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="setting">Setting</string>
    <string name="streaming_download">Streaming / Download</string>
    <string name="recording">Recording</string>
    <string name="data_management">Data management</string>
    <string name="push_notification">Push Notification</string>
    <string name="image_quality_adjustment">Image quality adjustment during low-speed communication</string>
    <string name="app_version_information">App version information</string>
    <string name="other_page">Other</string>
    <string name="for_first_time_users">For first-time users (tutorial)</string>
    <string name="about_this_app">About this app</string>
    <string name="faq_Inquiries">FAQ / Inquiries</string>
    <string name="opinions_and_requests">Opinions and requests</string>
    <string name="brasso_official_website">BRASSO official website</string>
    <string name="ver_1_00_00">Ver. 1.00.00</string>
    <string name="conductor">Conductor</string>
    <string name="session">Session</string>
    <string name="hall_sound">Hall Sound</string>
    <string name="player">Player</string>
    <string name="text_crop">Crop</string>
    <string name="recommended_content">Recommended content</string>
    <string name="see_more">See more</string>
    <string name="about">About ○○○○○○</string>
    <string name="tutorial">Tutorial</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_confirmation_input">New password (confirmation input)</string>
    <string name="change">Change</string>
    <string name="text_error_while_compressing_image">Error while compressing image.</string>
    <string name="text_sure_want_to_logout">Are you sure you want to logout?</string>
    <string name="please_selected_profile_image_of_size_less_then_or_equal_to">Please selected profile image of size less then or equal to</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="to_reset">To Reset</string>
    <string name="password_and_confirm_password_must_be_same">Password and confirm password must be same</string>
    <string name="edit">Edit</string>
    <string name="your_profile">Your Profile</string>
    <string name="nickname">Nickname</string>
    <string name="part">MinusOne :</string>
    <string name="area_prefecture">Area (Prefecture)</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="to_buy">To buy</string>
    <string name="purchase">Purchase</string>
    <string name="purchasePartAndPremium">Purchase part video and premium video as a set</string>
    <string name="moveToCart">Move to cart</string>
    <string name="returnTo">Return</string>
    <string name="doYouWantToBuy">Do you want to buy?</string>
    <string name="recordingTitle">original recording\n Genban Hyoki</string>
    <string name="partHarp">MinusOne [harp]</string>
    <string name="iBought">I bought</string>
    <string name="wasAddedToTheCart">Was added to the cart</string>
    <string name="wouldYouLikeToBuyPremiumSet">Would you like to buy a premium video set?</string>
    <string name="checkPremiumAppendix">Check the premium appendix video</string>
    <string name="cannotBuyPremium">* Premium video cannot be purchased separately.</string>
    <string name="textPremiumVideo">Premium video</string>
    <string name="points">Points</string>
</resources>