<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_ten_black"
        android:paddingBottom="100dp">

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_description"
            android:paddingStart="17dp"
            android:paddingTop="18dp"
            android:paddingEnd="13dp"
            android:paddingBottom="8dp"
            app:srcCompat="@drawable/ic_close"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgClose"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/noto_sans_regular"
            android:includeFontPadding="false"
            android:text="@string/recordingTitle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:textAlignment="center"
            android:fontFamily="@font/noto_sans_regular"
            android:includeFontPadding="false"
            android:text="@string/partHarp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtConfirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="54dp"
            android:fontFamily="@font/noto_sans_regular"
            android:includeFontPadding="false"
            android:text="@string/iBought"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>

</ScrollView>