<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_ten_black"
        android:paddingBottom="37dp">

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/image_description"
            android:paddingStart="8dp"
            android:paddingTop="14dp"
            android:paddingEnd="13dp"
            android:paddingBottom="8dp"
            app:srcCompat="@drawable/ic_close"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/noto_sans_regular"
            android:includeFontPadding="false"
            android:text="@string/doYouWantToBuy"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/radius_eight_white"
            android:fontFamily="@font/noto_sans_regular"
            android:includeFontPadding="false"
            android:paddingStart="25dp"
            android:paddingTop="3dp"
            android:paddingEnd="25dp"
            android:paddingBottom="3dp"
            android:text="@string/ok"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtOk"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/noto_sans_light"
            android:includeFontPadding="false"
            android:text="@string/returnTo"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

</ScrollView>